<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('addresses', function (Blueprint $table) {
            $table->id();
            $table->morphs('owner'); // owner_type, owner_id (+index)
            $table->string('label', 60)->nullable();
            $table->string('street', 150);
            $table->string('house_number', 20)->nullable();
            $table->string('city', 100);
            $table->string('postal_code', 12);
            $table->decimal('latitude', 10, 7)->nullable();
            $table->decimal('longitude', 10, 7)->nullable();
            $table->timestamp('geocoded_at')->nullable();
            $table->boolean('is_default')->default(false);
            $table->timestamps();
        });
    }

    public function down(): void { Schema::dropIfExists('addresses'); }
};
